src/test/ui/error-codes/E0084.stderr
error[E0084]: unsupported representation for zero-variant enum
  --> $DIR/E0084.rs:1:1
   |
LL | #[repr(i32)]
   | ^^^^^^^^^^^^
LL | enum Foo {}
   | ----------- zero-variant enum

error: aborting due to previous error

For more information about this error, try `rustc --explain E0084`.
